# smart-money-agentic-trading-system

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  deploy.sh  pyproject.toml  setup_aws.sh  stack-example.env
backtests/agent_test/htf_fvg_ltf_bos/: 20260401-0000_20260413-1905.txt  20260413-0000_20260413-1905.txt
backtests/baseline_metrics/htf_fvg_ltf_bos/: 20260301-0000_20260413-1855.txt  20260401-0000_20260413-1855.txt
backtests/prompt_validation/htf_fvg_ltf_bos/: 20260301-0000_20260413-1835.txt  20260314-0932_20260410-0900.txt  20260314-1835_20260413-1835.txt  20260401-0000_20260413-1835.txt  20260413-0000_20260413-1905.txt
data/: BTCUSDT_1d_sample.csv  BTCUSDT_1h_sample.csv
docs/: class-diagram.md  ctrader-setup.md  deployment-diagram.md  poc-results.md
docs/adr/: 001-two-agent-architecture.md  002-data-source-protocol.md  003-trade-validation-agent-architecture.md  004-lambda-deployment-architecture.md
scripts/: smoke_test.py
src/trading/: __init__.py  gui.py  gui_validation.py  lambda_handler.py  main.py
src/trading/agents/: __init__.py  graph.py  htf_agent.py  llm_provider.py  ltf_agent.py  trade_validation_agent.py
src/trading/core/: __init__.py  models.py  protocols.py
src/trading/data/: __init__.py  backtest_datasource.py  binance_datasource.py  csv_datasource.py  ctrader_datasource.py
src/trading/notifiers/: __init__.py  telegram.py
src/trading/runner/: __init__.py  backtest.py  config.py  onetime.py  simulator.py
tests/unit/: test_bos.py  test_ctrader_datasource.py  test_fractals.py  test_fvg.py
(+9 files in other folders)
